--- a/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
+++ b/notebooks/elasticsearch/tmdb/es-ltr-basics-project.ipynb
@@ -80,11 +80,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_train.txt', \n",
-    "                                        featureSet='movies')"
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='movies')\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -93,9 +98,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title_judgments_train.txt',\n",
+    "                  training_set=ftr_logger.logged,\n",
     "                  index='tmdb',\n",
     "                  featureSet='movies',\n",
     "                  modelName='title')"
