--- a/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
+++ b/notebooks/elasticsearch/tmdb/netfix movies-random-forests.ipynb
@@ -185,11 +185,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_rf_judgments_train.txt', \n",
-    "                                        featureSet='title_rf')"
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title_rf')\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))"
    ]
   },
   {
@@ -207,9 +212,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import kcv\n",
+    "from ltr.ranklib import kcv\n",
     "res  = kcv(client,\n",
-    "            trainingInFile='data/title_rf_judgments_train.txt',\n",
+    "            training_set=ftr_logger.logged,\n",
     "            metric2t='NDCG@10',\n",
     "            leafs=4,\n",
     "            trees=100,\n",
@@ -244,9 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "res  = train(client,\n",
-    "             trainingInFile='data/title_rf_judgments_train.txt',\n",
+    "             training_set=ftr_logger.logged,\n",
     "             metric2t='NDCG@10',\n",
     "             leafs=4,\n",
     "             trees=100,\n",
