--- a/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
+++ b/notebooks/solr/tmdb/ai-powered-search-ch-10.ipynb
@@ -21,9 +21,7 @@
    "outputs": [],
    "source": [
     "from ltr.client import SolrClient\n",
-    "client = SolrClient()\n",
-    "\n",
-    "import numpy as np"
+    "client = SolrClient()"
    ]
   },
   {
@@ -129,11 +127,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments_binary.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_binary_train.txt', \n",
-    "                                        featureSet='title')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title')\n",
+    "with judgments_open('data/title_judgments_binary.txt') as judgments:\n",
+    "    for qid, query_judgments in groupby(judgments, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments, \n",
+    "                               keywords=judgments.keywords(qid))"
    ]
   },
   {
@@ -143,7 +146,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from ltr.judgments import judgments_from_file, judgments_to_nparray\n",
+    "from ltr.judgments import judgments_to_nparray\n",
     "\n",
     "def pairwise_transform(features, predictors):\n",
     "    \"\"\" Informed by\n",
@@ -173,10 +176,8 @@
     "                transformed_features.append(features[i, :] - features[j, :])\n",
     "    return np.array(transformed_features), np.array(transformed_predictors)\n",
     "\n",
-    "def samples_from_training_data(fname):\n",
-    "    with open(fname) as f:\n",
-    "        judgs = judgments_from_file(f)\n",
-    "        features, predictors = judgments_to_nparray(judgs)\n",
+    "def samples_from_training_data(training_set):\n",
+    "    features, predictors = judgments_to_nparray(training_set)\n",
     "    \n",
     "    # Scale data\n",
     "    print(\"Scaling\")\n",
@@ -190,7 +191,7 @@
     "    features, predictors = pairwise_transform(features, predictors)\n",
     "    return features, predictors.ravel(), scaler\n",
     "\n",
-    "features, predictors, scaler = samples_from_training_data(fname='data/title_judgments_binary_train.txt')\n",
+    "features, predictors, scaler = samples_from_training_data(ftr_logger.logged)\n",
     "features"
    ]
   },
