--- a/notebooks/solr/tmdb/netfix movies(Solr).ipynb
+++ b/notebooks/solr/tmdb/netfix movies(Solr).ipynb
@@ -156,11 +156,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title_judgments_train.txt', \n",
-    "                                        featureSet='title')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title')\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments,\n",
+    "                               keywords=judgment_list.keywords(qid))\n",
+    "        \n",
+    "training_set=ftr_logger.logged"
    ]
   },
   {
@@ -178,14 +185,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,7],\n",
+    "                                               features=[1,2,7],\n",
     "                                               featureSet='title')\n",
     "\n",
     "print()\n",
@@ -230,9 +237,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -267,9 +274,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -316,23 +323,22 @@
    "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title')\n",
     "\n",
-    "with open('data/title_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
+    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "    print(qid)\n",
+    "    if qid == 1: # Rambo\n",
+    "        model = eval_model(modelName='title',\n",
+    "                               features=features,\n",
+    "                               judgments=query_judgments)\n",
     "\n",
-    "\n",
-    "rambo = judgmentDict[1]\n",
-    "model = eval_model(modelName='title',\n",
-    "                       features=features,\n",
-    "                       judgments=rambo)\n",
-    "\n",
-    "print()\n",
-    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
-    "print()\n",
-    "print(model)"
+    "        print()\n",
+    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
+    "        print()\n",
+    "        print(model)\n",
+    "        break"
    ]
   },
   {
@@ -457,8 +463,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "client.get_doc(index='tmdb', doc_id=1368)"
    ]
   },
@@ -542,6 +546,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "client.reset_ltr(index='tmdb')\n",
+    "\n",
+    "\n",
     "config = [\n",
     "    #1\n",
     "    {\n",
@@ -630,11 +637,18 @@
     "\n",
     "client.create_featureset(index='tmdb', name='title2', ftr_config=config)\n",
     "\n",
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title2_judgments_train.txt', \n",
-    "                                        featureSet='title2')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='title2')\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments,\n",
+    "                               keywords=judgment_list.keywords(qid))\n",
+    "        \n",
+    "training_set=ftr_logger.logged"
    ]
   },
   {
@@ -654,9 +668,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import feature_search\n",
+    "from ltr.ranklib import feature_search\n",
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title2_judgments_train.txt',\n",
+    "                                               training_set=training_set,\n",
     "                                               metric2t='NDCG@10',\n",
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
@@ -711,9 +725,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title2_judgments_train.txt',\n",
+    "                  training_set=training_set,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
@@ -757,23 +771,21 @@
    "outputs": [],
    "source": [
     "from ltr.MART_model import eval_model\n",
-    "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
+    "from itertools import groupby\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "with open('data/title2_judgments_train.txt') as f:\n",
-    "    judgmentDict = judgments_by_qid(judgments_from_file(f))\n",
+    "for qid, query_judgments in groupby(training_set, key=lambda j: j.qid):\n",
+    "    if qid == 1:\n",
+    "        model = eval_model(modelName='title',\n",
+    "                           features=features,\n",
+    "                           judgments=query_judgments)\n",
     "\n",
-    "\n",
-    "rambo=judgmentDict[1]\n",
-    "model = eval_model(modelName='title2',\n",
-    "                       features=features,\n",
-    "                       judgments=rambo)\n",
-    "\n",
-    "print()\n",
-    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
-    "print()\n",
-    "print(model)"
+    "        print()\n",
+    "        print(\"## Evaluating graded docs for search keywords 'Rambo'\")\n",
+    "        print()\n",
+    "        print(model)\n",
+    "        break"
    ]
   },
   {
@@ -808,38 +820,6 @@
    "source": [
     "from ltr.helpers.movies import get_movie\n",
     "[cast['character'] for cast in get_movie(1368)['cast']][:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.index import rebuild\n",
-    "from ltr.helpers.movies import indexable_movies\n",
-    "\n",
-    "def add_collection_and_char_name(src_movie, base_doc):\n",
-    "    if 'belongs_to_collection' in src_movie and src_movie['belongs_to_collection'] is not None:\n",
-    "        if 'name' in src_movie['belongs_to_collection']:\n",
-    "            base_doc['collection_name_en'] = src_movie['belongs_to_collection']['name']\n",
-    "            \n",
-    "    if 'cast' in src_movie and src_movie['cast'] is not None:\n",
-    "        characters = [cast['character'] for cast in get_movie(1368)['cast']][:5]\n",
-    "        base_doc['top_chars_en'] = characters\n",
-    "    return base_doc\n",
-    "\n",
-    "movies=indexable_movies(movies='data/tmdb.json', enrich=add_collection_and_char_name)\n",
-    "rebuild(client, index='tmdb', doc_src=movies)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.get_doc(index='tmdb', doc_id=1892)"
    ]
   },
   {
