--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -156,11 +156,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                                        trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                                        featureSet='genre')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments,\n",
+    "                               keywords=judg_list.keywords(qid))"
    ]
   },
   {
@@ -178,9 +183,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client, \n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
@@ -235,20 +240,26 @@
    "outputs": [],
    "source": [
     "from ltr import date_genre_judgments\n",
-    "from ltr.log import judgments_to_training_set\n",
     "\n",
     "date_genre_judgments.synthesize(client,\n",
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
     "\n",
-    "judgments_to_training_set(client,\n",
-    "                          judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                          trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                          featureSet='genre')\n",
+    "from ltr.judgments import judgments_from_file\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
     "\n",
-    "from ltr.train import train\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(qid=qid, \n",
+    "                               judgments=query_judgments,\n",
+    "                               keywords=judg_list.keywords(qid))\n",
+    "        \n",
+    "        \n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
     "                 index='tmdb',\n",
@@ -259,7 +270,7 @@
     "for ftrId, impact in trainLog.impacts.items():\n",
     "    print(\"{} - {}\".format(ftrId, impact))\n",
     "    \n",
-    "print(\"Perfect NDCG! {}\".format(trainLog.rounds[-1]))"
+    "print(\"NDCG! {}\".format(trainLog.rounds[-1]))"
    ]
   },
   {
