--- a/notebooks/elasticsearch/tmdb/sandbox.ipynb
+++ b/notebooks/elasticsearch/tmdb/sandbox.ipynb
@@ -82,11 +82,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/sandbox_judgments_train.txt', \n",
-    "                                        featureSet='sandbox')"
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='sandbox')\n",
+    "with judgments_open('data/title_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))\n"
    ]
   },
   {
@@ -107,10 +112,10 @@
     "  Experiment with the leafs and trees variables, how do they affect NGCG?\n",
     "  Does a high leaf value increase your NDCG?  What could be the potential downfalls?\n",
     "'''\n",
-    "from ltr import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog  = train(client,\n",
     "                  index='tmdb',\n",
-    "                  trainingInFile='data/sandbox_judgments_train.txt',\n",
+    "                  training_set=ftr_logger.logged,\n",
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
