--- a/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
+++ b/notebooks/elasticsearch/tmdb/tale-of-two-queries (ES).ipynb
@@ -182,11 +182,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                                        trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                                        featureSet='genre')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
+    "\n",
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))\n"
    ]
   },
   {
@@ -204,9 +213,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
@@ -261,19 +270,25 @@
    "outputs": [],
    "source": [
     "from ltr import date_genre_judgments\n",
-    "from ltr.log import judgments_to_training_set\n",
     "date_genre_judgments.synthesize(client,\n",
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
     "\n",
-    "judgments_to_training_set(client,\n",
-    "                          judgmentInFile='data/genre_by_date_judgments.txt', \n",
-    "                          trainingOutFile='data/genre_by_date_judgments_train.txt', \n",
-    "                          featureSet='genre')\n",
+    "from ltr.log import FeatureLogger\n",
+    "from ltr.judgments import judgments_open\n",
+    "from itertools import groupby\n",
     "\n",
-    "from ltr.train import train\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
+    "with judgments_open('data/genre_by_date_judgments.txt') as judgment_list:\n",
+    "    for qid, query_judgments in groupby(judgment_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments, \n",
+    "                               qid=qid,\n",
+    "                               keywords=judgment_list.keywords(qid))\n",
+    "        \n",
+    "        \n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
