--- a/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
+++ b/notebooks/solr/tmdb/gonna need a bigger bot (Solr).ipynb
@@ -141,11 +141,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client,\n",
-    "                                        judgmentInFile='data/genome_judgments.txt', \n",
-    "                                        trainingOutFile='data/genome_judgments_train.txt', \n",
-    "                                        featureSet='genome')"
+    "from ltr.judgments import judgments_open\n",
+    "from ltr.log import FeatureLogger\n",
+    "from itertools import groupby\n",
+    "\n",
+    "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genome')\n",
+    "with judgments_open('data/genome_judgments.txt') as judg_list:\n",
+    "    # For each query's judgments log features, and add to our training set...\n",
+    "    for qid, query_judgments in groupby(judg_list, key=lambda j: j.qid):\n",
+    "        ftr_logger.log_for_qid(judgments=query_judgments,\n",
+    "                               qid=qid, \n",
+    "                               keywords=judg_list.keywords(qid))"
    ]
   },
   {
@@ -165,9 +171,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.train import train\n",
+    "from ltr.ranklib import train\n",
     "trainLog = train(client,\n",
-    "                 trainingInFile='data/genome_judgments_train.txt',\n",
+    "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
     "                 index='tmdb',\n",
