--- a/notebooks/solr/tmdb/raw-solr-commands.ipynb
+++ b/notebooks/solr/tmdb/raw-solr-commands.ipynb
@@ -88,7 +88,7 @@
     "      \"name\" : \"title_bm25\",\n",
     "      \"store\": \"test\",\n",
     "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : { #q=title:({$keywords})\n",
+    "      \"params\" : {\n",
     "        \"q\" : \"title:(${keywords})\"\n",
     "      }\n",
     "    },\n",
@@ -380,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
