adjust solr totq lab for Dan"s comments and remove tqdm import from client

--- a/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
+++ b/notebooks/solr/tmdb/tale-of-two-queries (Solr).ipynb
@@ -254,15 +254,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr import date_genre_judgments\n",
-    "\n",
     "date_genre_judgments.synthesize(client,\n",
     "                                judgmentsOutFile='data/genre_by_date_judgments.txt',\n",
     "                                autoNegate=True)\n",
-    "\n",
-    "from ltr.judgments import judgments_from_file\n",
-    "from ltr.log import FeatureLogger\n",
-    "from itertools import groupby\n",
     "\n",
     "ftr_logger=FeatureLogger(client, index='tmdb', feature_set='genre')\n",
     "with judgments_open('data/genre_by_date_judgments.txt') as judg_list:\n",
@@ -271,8 +265,7 @@
     "                               judgments=query_judgments,\n",
     "                               keywords=judg_list.keywords(qid))\n",
     "        \n",
-    "        \n",
-    "from ltr.ranklib import train\n",
+    "\n",
     "trainResponse = train(client,\n",
     "                 training_set=ftr_logger.logged,\n",
     "                 metric2t='NDCG@10',\n",
@@ -316,7 +309,7 @@
    "outputs": [],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"blah\", modelName=\"genre\")"
+    "search(client, keywords=\"drama\", modelName=\"genre\")"
    ]
   },
   {
@@ -353,7 +346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
